# kosher-rust

./: .gitignore  Cargo.toml  README.md  REVIEW.md
.github/scripts/: cargo-feature-combinations.sh
.github/workflows/: astronomical-calculator.yml  feature-combinations.yml  hebrew-holiday-calendar.yml  limudim-calendar.yml  tests.yaml  zmanim-calculator.yml
crates/astronomical-calculator/: Cargo.toml  README.md
crates/astronomical-calculator/src/: lib.rs
crates/astronomical-calculator/src/tests/: geonames_tests.rs  mod.rs  spa_tests.rs  suncalc_tests.rs  unsafe_spa.rs
crates/astronomical-calculator/test_data/: pyproject.toml
crates/hebrew-holiday-calendar/: Cargo.toml  README.md
crates/hebrew-holiday-calendar/src/: lib.rs
crates/hebrew_holiday_calendar/: Cargo.toml  README.md
crates/hebrew_holiday_calendar/src/: lib.rs
crates/limudim-calendar/: Cargo.toml  README.md
crates/limudim-calendar/limudim-wasm/: Cargo.toml
crates/limudim-calendar/limudim-wasm/src/: lib.rs
crates/limudim-calendar/src/: amud_yomi_bavli_dirshu.rs  benchmarks.rs  daf_hashavua_bavli.rs  daf_yomi_bavli.rs  daf_yomi_yerushalmi.rs  date.rs  lib.rs  mishna_yomis.rs  pirkei_avos.rs
crates/zmanim-calculator/: Cargo.toml  README.md  build.rs  extract_java_public_methods.py
crates/zmanim-calculator/java/src/main/java/com/kosherjava/zmanim/: AstronomicalCalendar.java  ComprehensiveZmanimCalendar.java
crates/zmanim-calculator/java/src/main/java/com/kosherjava/zmanim/util/: NOAACalculator.java
crates/zmanim-calculator/src/: astronomy.rs  calculator.rs  java_bindings.rs  java_tests.rs  lib.rs  molad.rs  presets.rs  presets_gen.rs  primitive_zman.rs  tests.rs
crates/zmanim-calculator/src/java_tests/: cases.rs  hebrew_dates.rs  jni.rs  mod.rs  parity.rs  policy.rs  random.rs
crates/zmanim-calculator/src/java_tests/hebrew_dates/: assertions.rs  fixtures.rs  java_reference.rs  mod.rs  policy.rs  random.rs  rust_reference.rs
crates/zmanim-calculator/src/java_tests/limudim/: mod.rs
crates/zmanim-calculator/src/java_tests/zmanim/: assertions.rs  fixtures.rs  java_reference.rs  mod.rs  policy.rs  random.rs  rust_reference.rs  types.rs
crates/zmanim-calculator/src/types/: config.rs  error.rs  location.rs
crates/zmanim-calculator/tools/: README.md  create-doc-stubs.py  deprecated.py  docs.py  dsl.py  generate-docs.py  generate-rust.py  models.py  parse-javadoc.py  pyproject.toml
crates/zmanim-calculator/tools/docs/: getAlos120Minutes.md  getAlos120Zmanis.md  getAlos16Point1Degrees.md  getAlos18Degrees.md  getAlos19Degrees.md  getAlos19Point8Degrees.md  getAlos26Degrees.md  getAlos60Minutes.md  getAlos72Minutes.md  getAlos72Zmanis.md  getAlos90Minutes.md  getAlos90Zmanis.md  getAlos96Minutes.md  getAlos96Zmanis.md  getAlosBaalHatanya.md  getBainHashmashosRT13Point24Degrees.md  getBainHashmashosRT13Point5MinutesBefore7Point083Degrees.md  getBainHashmashosRT2Stars.md  getBainHashmashosRT58Point5Minutes.md  getBainHashmashosYereim13Point5Minutes.md  getBainHashmashosYereim16Point875Minutes.md  getBainHashmashosYereim18Minutes.md  getBainHashmashosYereim2Point1Degrees.md  getBainHashmashosYereim2Point8Degrees.md  getBainHashmashosYereim3Point05Degrees.md  getBeginAstronomicalTwilight.md  getBeginCivilTwilight.md  getBeginNauticalTwilight.md  getCandleLighting.md  getChatzosHalayla.md  getChatzosHayom.md  getChatzosHayomAsHalfDay.md  getEndAstronomicalTwilight.md  getEndCivilTwilight.md  getEndNauticalTwilight.md  getFixedLocalChatzosHayom.md  getMinchaGedola16Point1Degrees.md  getMinchaGedola30Minutes.md  getMinchaGedola72Minutes.md  getMinchaGedolaAhavatShalom.md  (+128 more)
crates/zmanim-calculator/tools/output/: methods-with-documentation.json  methods.json
interop-tests/java_interop_tests/: Cargo.toml  build.rs
interop-tests/java_interop_tests/src/: lib.rs
interop-tests/java_interop_tests/src/calendar/: assertions.rs  fixtures.rs  java_reference.rs  mod.rs  random.rs  rust_reference.rs  types.rs
interop-tests/java_interop_tests/src/limudim/: mod.rs
interop-tests/java_interop_tests/src/zmanim/: assertions.rs  fixtures.rs  java_reference.rs  mod.rs  parity_tests.rs  policy.rs  random.rs  rust_reference.rs  types.rs
interop-tests/js_interop_tests/: Cargo.toml  README.md  bunfig.toml  package.json
interop-tests/js_interop_tests/src/: lib.rs
interop-tests/js_interop_tests/tests/: amud_yomi_dirshu.test.ts  daf_hashavua.test.ts  daf_yomi.test.ts  js_interop.rs  mishna_yomi.test.ts  pirkei_avos.test.ts  tehillim_monthly.test.ts  yerushalmi_yomi.test.ts
src/: lib.rs
src/calendar/: holiday.rs  mod.rs  month.rs  parsha.rs  tests.rs
src/limudim/: amud_yomi_bavli_dirshu.rs  cycle.rs  daf_hashavua_bavli.rs  daf_yomi_bavli.rs  daf_yomi_yerushalmi.rs  interval.rs  limud.rs  limud_calculator.rs  mishna_yomis.rs  mod.rs  pirkei_avos.rs  tehillim_monthly.rs  units.rs
src/zmanim/: astronomy.rs  mod.rs  molad.rs  presets.rs  primitives.rs  tests.rs
src/zmanim/types/: config.rs  error.rs  location.rs
test/: README.md  jnigen.dart
test/lib/src/: rnd.dart
test/lib/src/harness/: comparison.dart  constants.dart  date.dart  init.dart  options.dart  zman_test_case.dart
test/lib/src/java/: kosher_java.g.dart
test/lib/src/jewish_date/: cases.dart  java_adapter.dart  runner.dart
test/lib/src/rust/: api.dart  frb_generated.dart
test/lib/src/zmanim/: cases.dart  java_adapter.dart  models.dart  runner.dart
test/rust/: Cargo.toml
test/rust/src/: frb_generated.rs
test/rust/src/api/: mod.rs
tests/: benchmarks.rs  js_interop.rs
tools/: dsl.py  generate-rust.py  pyproject.toml
