[workspace]
members = [
    "crates/hebrew-holiday-calendar",
    "crates/limudim-calendar",
    "crates/limudim-calendar/limudim-wasm",
    "crates/zmanim-calculator",

]
resolver = "2"

[workspace.lints.clippy]
unwrap_used = "warn"
expect_used = "warn"
panic = "warn"

[workspace.dependencies]
# Internal crates
hebrew-holiday-calendar = { path = "crates/hebrew-holiday-calendar", default-features = false, version = "0.6.0" }
limudim-calendar = { path = "crates/limudim-calendar", version = "0.6.0" }
zmanim-calculator = { path = "crates/zmanim-calculator", version = "0.6.0" }

# Core
jiff = { version = "0.2.24", default-features = false }
jiff-icu = { version = "0.2.2", default-features = false }
icu_calendar = { version = "2.2.1", features = [
    "unstable",
], default-features = false }
core_maths = "0.1.1"
thiserror = { version = "2.0.18", default-features = false }
defmt = "1.0.1"
num_enum = { version = "0.7.6", default-features = false }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Testing
proptest = "1.11.0"
rand = "0.10.1"
lazy_static = "1.5.0"
tinystr = "0.8.3"
j4rs = "0.25.1"

[profile.release.package.limudim-wasm]
opt-level = "s"

[patch.crates-io]
jiff = { git = "https://github.com/dickermoshe/jiff", branch = "master" }
