[package]
name = "kosher-rust"
version = "0.1.0"
edition = "2024"

[features]
default = ["alloc"]
defmt = ["dep:defmt"] #TODO: Add jiff/defmt? feature once released
alloc = []


[dependencies]
# Calendar libraries
icu_calendar = { version = "2.2.0", default-features = false }

# Datetime libraries
jiff = { version = "0.2.0", default-features = false }
jiff-icu = { version = "0.2.0", default-features = false }
core_maths = "0.1.1"

# Utility for converting enums to integers and back
num_enum = { version = "0.7.0", default-features = false }

# Logging to embedded targets
defmt = { version = "1.0.0", optional = true }

# Utility for creating custom error types
thiserror = { version = "2.0.18", default-features = false }

[dev-dependencies]
jiff = { version = "0.2.0", default-features = false, features = [
    "std",
    "alloc",
    "tzdb-bundle-always",
] }

[lints]
workspace = true

[workspace]
members = ["interop-tests/java_interop_tests", "interop-tests/js_interop_tests"]

[workspace.lints.rust]
missing_docs = "warn"

[workspace.lints.clippy]
unwrap_used = "warn"
expect_used = "warn"
panic = "warn"
