[package]
name = "astronomical-calculator"
version = "0.5.2"
edition = "2021"
authors = ["Moshe Dicker"]
description = "High-precision astronomical calculations for solar position, sunrise/sunset times, and related phenomena"
license = "MIT"
repository = "https://github.com/dickermoshe/rust-zmanim-project"
readme = "README.md"
keywords = ["astronomy", "solar", "sun", "sunrise", "sunset"]
categories = ["science", "date-and-time"]
rust-version = "1.70"
exclude = ["test_data/"]

[features]
default = []
defmt = ["dep:defmt"]

[dependencies]
core_maths.workspace = true
jiff.workspace = true
thiserror.workspace = true
defmt = { workspace = true, optional = true }


[dev-dependencies]
jiff = { workspace = true, features = ["std", "serde", "tzdb-bundle-always"] }
proptest.workspace = true
arbitrary = { version = "1", features = ["derive"] }
proptest-arbitrary-interop = "0.1"
csv = "1.3"
serde.workspace = true
sunrise = "3.0.0"
serde_json.workspace = true
rand.workspace = true

[lints.clippy]
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"
excessive_precision = "allow"

[lints.rust]
missing_docs = "warn"
