[package]
name = "zmanim-calculator"
version = "0.6.0"
description = "A comprehensive Rust library for calculating Zmanim with no_std support"
edition = "2021"
license = "LGPL-2.1"
repository = "https://github.com/dickermoshe/rust-zmanim-project"
homepage = "https://github.com/dickermoshe/rust-zmanim-project"
documentation = "https://docs.rs/zmanim-calculator"

[features]
# By default, only the core functionality is enabled.
default = []
# Enable this feature to use the defmt crate for logging.
defmt = ["dep:defmt", "jiff/defmt"]


[dependencies]
icu_calendar.workspace = true
jiff.workspace = true
jiff-icu.workspace = true
defmt = { workspace = true, optional = true }
core_maths.workspace = true
hebrew-holiday-calendar.workspace = true
thiserror.workspace = true

[dev-dependencies]
jni = { version = "0.22.4", features = ["invocation"] }
jiff = { workspace = true, features = ["std", "tzdb-bundle-always"] }
lazy_static.workspace = true
j4rs.workspace = true
num_enum.workspace = true
proptest.workspace = true
rand.workspace = true
tinystr.workspace = true
tzf-rs = "1.1.3"
limudim-calendar.workspace = true

[lints]
workspace = true

[build-dependencies]
jbindgen = "0.1.0"
