[package]
name = "java_interop_tests"
version = "0.1.0"
edition = "2024"

[dependencies]
icu_calendar = { version = "2.2.0", default-features = false }
jiff = { version = "0.2.0", default-features = false, features = [
    "std",
    "alloc",
    "tzdb-bundle-always",
] }
jiff-icu = { version = "0.2.0", default-features = false }
jni = { version = "0.22.4", features = ["invocation"] }
kosher-rust = { path = "../.." }
rand = "0.10.1"
tzf-rs = "1.3.3"

[build-dependencies]
jbindgen = "0.1.0"
