[package]
name = "limudim_wasm"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[dependencies]
icu_calendar = { version = "2.2.0", default-features = false }
jiff = { version = "0.2.0", default-features = false, features = ["std", "alloc", "tzdb-bundle-always"] }
jiff-icu = { version = "0.2.0", default-features = false }
kosher-rust = { path = "../.." }
wasm-bindgen = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.6"
