[project]
name = "tools"
version = "0.1.0"
description = "Codegen pipeline: KosherJava Javadocs and DSL to Rust zman presets"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "openai>=2.38.0",
    "pydantic>=2.13.4",
    "python-dotenv>=1.2.2",
    "tree-sitter>=0.25.2",
    "tree-sitter-java>=0.23.5",
]
